Attachments support for Discord